# mcp-server-templates

./: .gitignore  README.md
docs/: mcp-oauth-guide.md  mcp-primitives-guide.md
http-remote/python/: README.md  pyproject.toml  server.py
http-remote/typescript/: README.md  package.json
http-remote/typescript/src/: server.ts
python/01-stdio-server/: README.md  pyproject.toml  server.py
python/02-streamable-http-server/: README.md  pyproject.toml  server.py
python/03-auth-oauth-server/: .env.example  README.md  auth.py  pyproject.toml  server.py  tasks.json
python/04-okta-oauth-server/: .env.example  README.md  auth.py  pyproject.toml  server.py
stdio/python/: README.md  pyproject.toml  server.py
stdio/typescript/: README.md  package.json
stdio/typescript/src/: server.ts
typescript/01-stdio-server/: package-lock.json  package.json
typescript/01-stdio-server/src/: server.ts
typescript/02-streamable-http-server/: package-lock.json  package.json  products.json
typescript/02-streamable-http-server/src/: server.ts
typescript/03-auth-oauth-server/: .env.example  package-lock.json  package.json  tasks.json
typescript/03-auth-oauth-server/src/: auth.ts  server.ts
typescript/04-okta-oauth-server/: .env.example  incidents.json  package-lock.json  package.json
typescript/04-okta-oauth-server/src/: auth.ts  server.ts
